[package]
name = "attach"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
chrono-humanize = "0.2.3"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
portable-pty = "0.9.0"
terminal_size = "0.4.3"
tokio = { version = "1.50.0", features = ["full"] }
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3.27.0"
